Improved upon the MergeSort algorithm, fully animated showing the algorithms sorting process and displaying it on screen, correctly moves the bars into the right positions with comparing bars being red and reverted back to black once moved. As a result the original mergeSort function has been replaced with an updated one to allow for the animation. New slider added to allow for user control over the speed of animation with a minimum of 1 (Fastest) to a maximum of 15 (Slowest), this slider is very similar to the array size slider in terms of functionality and has its own file. With any chances made being picked up using the same timer used to check the array size changes slider. Some issues still remaining include: disable buttons and sliders when sorting, bar positioning if there is only 1 100% bar when it is moved the entire chart shifts upwards and then back down once it is replaced, decide on how to approach pressing sort again after the chart is sorted with it currently just calling "this.resetArray()" when pressed this can be annoying if the user wants to sort a specifically chosen array they happen to generate.

--- a/src/SortingVisualizer/SortingStyles.css
+++ b/src/SortingVisualizer/SortingStyles.css
@@ -40,6 +40,23 @@ html {
     border-radius: 5px;
 }
 
+.speed-container {
+    padding: 10px;
+    margin: 10px;
+    height: 4.0625em;
+    width: 10em;
+
+    background-color: gray;
+    border: medium solid black;
+    border-radius: 5px;
+}
+
+.speed-container #speed-title {
+    font-family: Arial;
+    font-size: large;
+    font-weight: bold;
+}
+
 .header #sort-button {
     padding: 10px;
     margin: 10px;
